feat: add links in the sidebar

--- a/style.css
+++ b/style.css
@@ -34,11 +34,15 @@ main h1 {
   margin-top: 18px;
 }
 
+.sidebar,
+#logged-user-info-container {
+  display: flex;
+  flex-direction: column;
+}
+
 .sidebar {
   background: var(--green);
   padding-top: 24px;
-  display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: space-between;
   height: max(100vh, 500px);
@@ -48,6 +52,10 @@ main h1 {
 
 .open-sidebar {
   width: min(100vw, 250px);
+}
+
+.sidebar a {
+  text-decoration: none;
 }
 
 .sidebar ul {
@@ -62,10 +70,14 @@ main h1 {
 
 .sidebar ul li {
   padding: 13px 13px 0;
+  width: 100%;
+}
+
+.sidebar ul li:first-child,
+.sidebar ul li a {
   display: flex;
   align-items: center;
   gap: 13px;
-  width: 100%;
 }
 
 .sidebar ul li:first-child {
@@ -76,12 +88,6 @@ main h1 {
 .open-sidebar ul li:first-child,
 .open-sidebar #logout-container {
   justify-content: space-between;
-}
-
-.sidebar ul li:not(:first-child),
-.sidebar ul li:first-child img,
-#logout-container img {
-  cursor: pointer;
 }
 
 .sidebar ul li:nth-child(2) {
@@ -102,6 +108,7 @@ main h1 {
 #menu-icon {
   padding-top: 2px;
   transition: padding 0.3s;
+  cursor: pointer;
 }
 
 .open-sidebar #menu-icon {
@@ -113,15 +120,23 @@ main h1 {
   text-transform: capitalize;
 }
 
-#logout-container {
-  background: rgba(220, 228, 227, 0.6);
-  padding: 7px 14px;
-  width: 100%;
+#avatar,
+#logout-icon,
+#logout-container,
+.open-sidebar #logo-icon {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
+#logout-container {
+  background: rgba(220, 228, 227, 0.6);
+  padding: 7px 14px;
+  width: 100%;
+}
+
+#logo-icon,
+li a .sidebar-text,
 #logged-user-container {
   display: none;
 }
@@ -131,7 +146,7 @@ main h1 {
   gap: 9px;
 }
 
-#avatar {
+#avatar img {
   width: 45px;
   height: 45px;
   border-radius: 12px;
@@ -141,8 +156,6 @@ main h1 {
 
 #logged-user-info-container {
   text-transform: capitalize;
-  display: flex;
-  flex-direction: column;
   justify-content: center;
 }
 
@@ -154,13 +167,7 @@ main h1 {
   padding: 11px 0;
 }
 
-#logo-icon,
-li .sidebar-text {
-  display: none;
-}
-
-.open-sidebar #logo-icon,
-.open-sidebar li .sidebar-text {
+.open-sidebar li a .sidebar-text {
   display: initial;
 }
 
